--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -3,4 +3,6 @@
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net461" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
+  <package id="NAudio" version="1.8.5" targetFramework="net461" />
+  <package id="taglib" version="2.1.0.0" targetFramework="net461" />
 </packages>
