--- a/GrandadAudioPlayerAdmin/GrandadAudioPlayerAdmin.csproj
+++ b/GrandadAudioPlayerAdmin/GrandadAudioPlayerAdmin.csproj
@@ -82,6 +82,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utils\AllowedExtensionValidationRule.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="MainWindow.xaml">
