--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.5.1-ci1278" targetFramework="net461" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
   <package id="NAudio" version="1.8.5" targetFramework="net461" />
