--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,6 @@ steps:
 
 - task: GithubRelease@0
   inputs:
-    githubconnection: codersparks
+    githubconnection: githubconnectionservice-pat
     repositoryName: GrandadAudioPlayer
     title: $(Build.DefinitionName)
