--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,6 @@ steps:
 
 - task: GithubRelease@0
   inputs:
-    githubconnection: githubconnectionservice-pat
+    githubconnection: codersparkspat
     repositoryName: codersparks/GrandadAudioPlayer
     title: $(Build.DefinitionName)
