--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,3 +38,5 @@ steps:
     gitHubConnection: codersparkspat
     repositoryName: codersparks/GrandadAudioPlayer
     title: $(Build.DefinitionName)
+	tagSource: manual
+	tagSource: $(Build.BuildId)
