Fixing tag message

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,4 +39,4 @@ steps:
     repositoryName: codersparks/GrandadAudioPlayer
     title: $(Build.DefinitionName)
     tagSource: manual
-    tag: $(Build.BuildId)
+    tag: $(Build.BuildNumber)
