--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,10 @@ variables:
   system.debug: true
 
 steps:
+- task: PowerShell@2
+  inputs:
+    filePath: "ImportCert.ps1"
+
 - task: NuGetToolInstaller@0
 
 - task: NuGetCommand@2
