--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,13 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: VSBuild@1
+  inputs:
+    solution: '$(solution)'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+    msbuildArgs: '/target:publish'
+
 - powershell: tree
 
 - task: GithubRelease@0
