Added reference to nuget package NAudio.wma

--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -9,6 +9,7 @@
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
   <package id="NAudio" version="1.8.5" targetFramework="net461" />
+  <package id="NAudio.Wma" version="1.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="taglib" version="2.1.0.0" targetFramework="net461" />
 </packages>
