--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AudioSwitcher.AudioApi" version="3.0.0" targetFramework="net461" />
+  <package id="AudioSwitcher.AudioApi.CoreAudio" version="3.0.0.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
