Still trying to make it work

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-powershell: |
+- powershell: |
     $major = "1"
     $minor = $env:BUILD_BUILDNUMBER.Substring(2,4)
     $build = $env:BUILD_BUILDNUMBER.Substring(6,2) + $env:BUILD_BUILDID.PadLeft(3, '0')
@@ -30,7 +30,7 @@ powershell: |
     Write-Output "Setting to version: $version"
     Write-Host "##vso[task.setvariable variable=version]$version"
 
-powershell: |
+- powershell: |
     (Get-Content $env:BUILD_SOURCESDIRECTORY\GrandadAudioPlayer\Properties\AssemblyInfo.cs).Replace('1.0.0', $env:VERSION).Replace('devBuildTag', $env:BUILD_BUILDNUMBER) | Set-Content $env:BUILD_SOURCESDIRECTORY\GrandadAudioPlayer\Properties\AssemblyInfo.cs
     Write-Output "Modified AssemblyInfo.cs:"
     Write-Output (Get-Content $env:BUILD_SOURCESDIRECTORY\GrandadAudioPlayer\Properties\AssemblyInfo.cs)
