--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,10 @@ steps:
 - powershell: $(Build.SourcesDirectory)\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --releasify .\GrandadAudioPlayer.$(version).nupkg
   workingDirectory: $(Build.SourcesDirectory)\GrandadAudioPlayer
 
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: $(Build.SourcesDirectory)\GrandadAudioPlayer)
+
 - task: GithubRelease@0
   inputs:
     gitHubConnection: codersparkspat
@@ -63,6 +67,8 @@ steps:
     title: $(Build.DefinitionName)
     tagSource: manual
     tag: $(Build.BuildNumber)
-    assets: 'GrandadAudioPlayer\bin\Release\app.publish\*'
+    assets: 
+      - 'GrandadAudioPlayer\bin\Release\app.publish\*'
+      - 'GrandadAudioPlayer\*.nupkg'
 
 - powershell: tree /F
