--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,8 +67,8 @@ steps:
     title: $(Build.DefinitionName)
     tagSource: manual
     tag: $(Build.BuildNumber)
-    assets: 
-      - 'GrandadAudioPlayer\bin\Release\app.publish\*'
-      - 'GrandadAudioPlayer\*.nupkg'
+    assets: |
+	  GrandadAudioPlayer\bin\Release\app.publish\*
+      GrandadAudioPlayer\*.nupkg
 
 - powershell: tree /F
