Removed Dev from package name

--- a/GrandadAudioPlayer/GrandadAudioPlayer.nuspec
+++ b/GrandadAudioPlayer/GrandadAudioPlayer.nuspec
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>GrandadAudioPlayerDev</id>
+    <id>GrandadAudioPlayer</id>
     <version>$VERSION$</version>
     <authors>CoderSparks</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>GrandadAudioPlayerDev</description>
+    <description>GrandadAudioPlayer</description>
   </metadata>
   <files>
     <file src="bin\Release\*" target="lib\net45"></file>
