--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.SourcesDirectory)\GrandadAudioPlayer\Releases\*'
+    rootFolderOrFile: 'GrandadAudioPlayer\Releases\*'
     includeRootFolder: false
 
 #- task: GithubRelease@0
