--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,19 +58,20 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.SourcesDirectory)\GrandadAudioPlayer\Releases'
+    rootFolderOrFile: '$(Build.SourcesDirectory)\GrandadAudioPlayer\Releases\'
     includeRootFolder: false
-	archiveFile: $(Build.SourcesDirectory)\GrandadAudioPlayer.zip
 
-#- task: GithubRelease@0
-#  inputs:
-#    gitHubConnection: codersparkspat
-#    repositoryName: codersparks/GrandadAudioPlayer
-#    title: $(Build.DefinitionName)
-#    tagSource: manual
-#    tag: $(Build.BuildNumber)
-#    assets: |
-#      GrandadAudioPlayer\bin\Release\app.publish\*
-#      GrandadAudioPlayer\*.nupkg
+
+- task: GithubRelease@0
+  inputs:
+    gitHubConnection: codersparkspat
+    repositoryName: codersparks/GrandadAudioPlayer
+    title: $(Build.DefinitionName)
+    tagSource: manual
+    tag: $(Build.BuildNumber)
+    assets: |
+      GrandadAudioPlayer.zip
+      GrandadAudioPlayer\*.nupkg
 
 - powershell: tree /F
+  condition: always()
