--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,8 +60,7 @@ steps:
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)\GrandadAudioPlayer\Releases\'
     includeRootFolder: false
-	archiveFile: $(Build.SourcesDirectory)\GrandadAudioPlayer.zip
-
+    archiveFile: GrandadAudioPlayer.zip
 
 - task: GithubRelease@0
   inputs:
