--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,9 +56,7 @@ steps:
 - powershell: $(Build.SourcesDirectory)\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --releasify .\GrandadAudioPlayer.$(version).nupkg
   workingDirectory: $(Build.SourcesDirectory)\GrandadAudioPlayer
 
-- task: Delay@1
-  inputs:
-    delayForMinutes: '1'
+- powershell: Start-Sleep -s 30
 
 - task: ArchiveFiles@2
   inputs:
