--- a/GrandadAudioPlayer/Log4Net.config
+++ b/GrandadAudioPlayer/Log4Net.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <log4net>
   <appender name="rollingLogFile" type="log4net.Appender.RollingFileAppender">
-    <file value="C:\Logs\WorkflowApp.log" />
+    <file value="C:\GrandadAudioPlayer\Logs\GrandadAudioPlayer.log" />
     <appendToFile value="true" />
     <rollingStyle value="Size" />
-    <maxSizeRollBackups value="10" />
+    <maxSizeRollBackups value="3" />
     <maximumFileSize value="100KB" />
     <staticLogFileName value="true" />
     <layout type="log4net.Layout.PatternLayout">
