--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,7 +71,7 @@ steps:
     assets: |
       GrandadAudioPlayer.zip
       GrandadAudioPlayer\*.nupkg
-  condition: and(succeeded() eq(variables['build.SourceBranch'], 'refs/heads/master'))
+  condition: and(succeeded(), eq(variables['build.SourceBranch'], 'refs/heads/master'))
 
 - powershell: tree /F
   condition: always()
