This Fixes #11 and Fixes #9 Updated configuration location to be constand and made logging configured programatically

--- a/GrandadAudioPlayer/GrandadAudioPlayer.csproj
+++ b/GrandadAudioPlayer/GrandadAudioPlayer.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Utils\Github\GithubFailureException.cs" />
     <Compile Include="Utils\Github\GithubRelease.cs" />
     <Compile Include="Utils\Github\GithubUser.cs" />
+    <Compile Include="Utils\Logging\GapLoggingManager.cs" />
     <Compile Include="Utils\Updater\GrandadAudioPlayerUpdater.cs" />
     <Compile Include="Utils\Updater\SchedulerConfiguration.cs" />
     <Compile Include="Utils\Updater\UpdaterJob.cs" />
