--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -12,6 +12,7 @@
   <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net461" />
   <package id="Quartz" version="3.0.7" targetFramework="net461" />
   <package id="Quartz.Unity" version="3.0.0" targetFramework="net461" />
+  <package id="RestSharp" version="106.6.3" targetFramework="net461" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net461" />
   <package id="Splat" version="1.6.2" targetFramework="net461" />
   <package id="squirrel.windows" version="1.9.0" targetFramework="net461" />
